NPM installation and packages set-up

--- a/index.html
+++ b/index.html
@@ -17,26 +17,17 @@
                     Ohhh, I do <br>Don't pin a note to me <br>I do promise to agree <br>
                     I do live in constant fear <br>I do wonder why I'm here <br>
                     And if you say I'm right <br>You'll hang me out to dry <br>
-                    But I can't see you every night <br>Free 
+                    But I can't see you every night <br>Free
                 </p>
-                <p>
-                    I do Don't wash my face again <br>I do away from all my friends <br>
-                    I do have a breath in you <br>I do can't see if we move <br>And if you say I'm right <br>
-                    I'll hang you out to dry <br>But I can't see you every night <br>Free 
-                </p> 
-                <p>
-                    I do (x3) 
+                <p>I do Don't wash my face again <br>I do away from all my friends <br>I do have a breath in you <br>I do can't see if we move <br>And if you say I'm right <br>
+                    I'll hang you out to dry <br>But I can't see you every night <br>Free
                 </p>
+                <p>I do (x3)</p>
                 <p>
                     Don't pin a note to me <br>I do promise to agree <br>I do live in constant fear <br>
-                    I do wonder why I'm here <br>And if you say I'm right <br>I'll hang you out to dry (x2)
-                </p> 
-                <p>
-                    But I can't see you every night <br>Free
-                </p> 
-                <p>
-                    I do (x4)
-                </p>
+                    I do wonder why I'm here <br>And if you say I'm right <br>I'll hang you out to dry (x2)</p>
+                <p>But I can't see you every night <br>Free</p>
+                <p>I do (x4)</p>
             </div>
         </section>
     </body>
